--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 
 <body>
   <div>
+    <h1>My name</h1>
+    <p> This is my website for IML300 class. A little bit about me. </p>
+  </div>
+
+  <div>
       <h1>Exercises</h1>
-      <a href="" target="blank">Spreadsheet Typeface</a><br>
-      <a href="" target="blank">Coding from Life</a><br>
-      <a href="" target="blank">:hover</a>
+      <a href="" target="blank">p5.js sketch 1</a><br>
+      <a href="" target="blank">p5.js sketch 2</a>
   </div>
   <div>
       <h1>Presentation</h1>
@@ -22,17 +26,13 @@
 
   <div>
       <h1>Projects</h1>
-      <h2>Project 1: Republish a Text</h2>
-      <a href="" target="blank">Prototype 1: Lorem Ipsum</a><br>
-      <a href="" target="blank">Prototype 2: Lorem Ipsum</a><br>
-      <a href="" target="blank">Final: Lorem Ipsum</a>
-      <h2>Project 2: CSS Typeface</h2>
-      <a href="" target="blank">Sketches</a><br>
+      <h2>Project 1: HyperNarrative</h2>
+      <a href="" target="blank">Concept</a><br>
       <a href="" target="blank">Prototype: Lorem Ipsum</a><br>
       <a href="" target="blank">Final: Lorem Ipsum</a>
-      <h2>Project 3: Exhibition Microsite</h2>
-      <a href="" target="blank">Sketches</a><br>
-      <a href="" target="blank">Prototype: Lorem Ipsum</a><br>
+      <h2>Project 2: Reimagining The Web</h2>
+      <a href="" target="blank">Final: Lorem Ipsum</a>
+      <h2>Project 3: Networked Justice</h2>
       <a href="" target="blank">Final: Lorem Ipsum</a>
   </div>
 </body>
