--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div>
-    <h1>My name</h1>
+    <h1>Claire Wong</h1>
     <p> This is my website for IML300 class. A little bit about me. </p>
   </div>
 
