--- a/project-1/page-2.html
+++ b/project-1/page-2.html
@@ -4,7 +4,6 @@
     <title>Links Example</title>
   </head>
   <body>
-    <br>
-    <a href="page-3.html"><img src="images/PROJECT%201-01.jpg">"asset/"></a>
-  </body>
-</html>
+    <a href="page-3.html"><img 
+    src="images/PROJECT%201-01.jpg" width="1920" height="1080" ></a>
+</body> </html>
