--- a/project-1/page-4.html
+++ b/project-1/page-4.html
@@ -4,11 +4,7 @@
     <title>Links Example</title>
   </head>
   <body>
-    Go back to the <a href="index.html">original page</a>.
-    <br>
-    <audio controls autoplay>
-      <source src="asset/rain_start.mp3" type="audio/mp3">   
-    </audio>
-      
+     <a href="page-5.html"><img 
+    src="images/PROJECT%201-03.jpg" width="1920" height="1080" ></a>
   </body>
 </html>
