--- a/project-1/index.html
+++ b/project-1/index.html
@@ -4,8 +4,7 @@
     <title>Links Example</title>
   </head>
   <body>
-    <a href="page-2.html">Click here</a> to see  page 2.
-    <br>
-    Or go to <a href="http://google.com">google.com</a>.
+   <a href="page-2.html"><img 
+    src="images/PROJECT%201-01.jpg" width="1920" height="1080" ></a>
   </body>
 </html>
