--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       <h1>Projects</h1>
       <h2>Project 1: HyperNarrative</h2>
       <a href="" target="blank">Concept</a><br>
-      <a href="" target="blank">Prototype: Lorem Ipsum</a><img src="images/PROJECT%201-01.jpg"><br>
-      <a href="" target="blank">Final: Lorem Ipsum</a>
+      <a href="" target="blank">Prototype: Lorem Ipsum</a>
+      <br>
+      <a href="page-1.html" target="blank">Final: Lorem Ipsum</a> 
       <h2>Project 2: Reimagining The Web</h2>
       <a href="" target="blank">Final: Lorem Ipsum</a>
       <h2>Project 3: Networked Justice</h2>
