--- a/project-1/page-1.html
+++ b/project-1/page-1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>title page</title>
   </head>
   <body>
    <a href="page-2.html"><img 
-    src="images/PROJECT%201-01.jpg" width="1790" height="1080" ></a>
+    src="images/PROJECT%201-01.jpg" style="max-width: 100%;" ></a>
   </body>
 </html>
