--- a/project-1/page-4.html
+++ b/project-1/page-4.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <a href="page-5.html"><img 
-    src="images/PROJECT%201-04.jpg" width="1790" height="1080" ></a>
+    src="images/PROJECT%201-04.jpg" style="max-width: 100%;" ></a>
   </body>
 </html>
