--- a/project-1/page-6.html
+++ b/project-1/page-6.html
@@ -5,6 +5,6 @@
   </head>
   <body>
      <a href="page-7.html"><img 
-    src="images/PROJECT%201-06.jpg" width="1790" height="1080" ></a>
+    src="images/PROJECT%201-06.jpg" style="max-width: 100%;" ></a>
   </body>
 </html>
