--- a/project-1/page-1.html
+++ b/project-1/page-1.html
@@ -4,12 +4,7 @@
     <title>title page</title>
   </head>
   <body>
-   <a href="page-2.html"><img src="asset/PROJECT%201%20buttons-01.png"  alt="enter button" width="493" height="133"></a>
-    
-    <style>
-        body {
-            background-image: url (https://ibb.co/3CjKQKx);
-        }
-      </style>
+   <a href="page-2.html"><img src="images/PROJECT%201-01.jpg" alt="enter button" style="max-height;"></a>
+
   </body>
 </html>\
