--- a/project-1/page-10.html
+++ b/project-1/page-10.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>bathroom 2.0</title>
   </head>
   <body>
      <a href="page-11.html"><img 
-    src="images/PROJECT%201-10.jpg" style="max-width: 100%;" ></a>
+    src="images/PROJECT%201-10.jpg" alt="character crying in bathroom" style="max-width: 100%;" ></a>
   </body>
 </html>
