--- a/project-1/page-13.html
+++ b/project-1/page-13.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>road in hollywood</title>
   </head>
   <body>
      <a href="page-14.html"><img 
-    src="images/PROJECT%201-13.jpg" style="max-width: 100%;" ></a>
+    src="images/PROJECT%201-13.jpg" alt="car driving in hollywood" style="max-width: 100%;" ></a>
   </body>
 </html>
