--- a/project-1/page-17.html
+++ b/project-1/page-17.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>coming home</title>
   </head>
   <body>
      <a href="page-18.html"><img 
-    src="images/PROJECT%201-17.jpg" style="max-width: 100%;" ></a>
+    src="images/PROJECT%201-17.jpg" alt="character holding box" style="max-width: 100%;" ></a>
   </body>
 </html>
