--- a/project-1/page-18.html
+++ b/project-1/page-18.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>finding home</title>
   </head>
   <body>
      <a href="page-19.html"><img 
-    src="images/PROJECT%201-18.jpg" style="max-width: 100%;" ></a>
+    src="images/PROJECT%201-18.jpg" alt="friends hugging" style="max-width: 100%;" ></a>
   </body>
 </html>
