--- a/project-1/page-2.html
+++ b/project-1/page-2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>introduction page</title>
   </head>
   <body>
     <a href="page-3.html"><img 
-    src="images/PROJECT%201-02.jpg" style="max-width: 100%;"></a>
+    src="images/PROJECT%201-02.jpg" alt="introduction page" style="max-width: 100%;"></a>
 </body> </html>
 <img src=""
