--- a/project-1/page-3.html
+++ b/project-1/page-3.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>bedroom</title>
   </head>
   <body>
       <a href="page-4.html"><img 
-    src="images/PROJECT%201-03.jpg" style="max-width: 100%;"></a>
+    src="images/PROJECT%201-03.jpg" alt="character sleeping" style="max-width: 100%;"></a>
   </body>
 </html>
