--- a/project-1/page-4.html
+++ b/project-1/page-4.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>bedroom 2.0</title>
   </head>
   <body>
     <a href="page-5.html"><img 
-    src="images/PROJECT%201-04.jpg" style="max-width: 100%;" ></a>
+    src="images/PROJECT%201-04.jpg" alt="character having nightmare" style="max-width: 100%;" ></a>
   </body>
 </html>
