--- a/project-1/page-5.html
+++ b/project-1/page-5.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>kitchen</title>
   </head>
   <body>
      <a href="page-6.html"><img 
-    src="images/PROJECT%201-05.jpg" style="max-width: 100%;" ></a>
+    src="images/PROJECT%201-05.jpg" alt="character in kitchen" style="max-width: 100%;" ></a>
   </body>
 </html>
