--- a/project-1/page-6.html
+++ b/project-1/page-6.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>kitchen 2.0</title>
   </head>
   <body>
      <a href="page-7.html"><img 
-    src="images/PROJECT%201-06.jpg" style="max-width: 100%;" ></a>
+    src="images/PROJECT%201-06.jpg" alt="character sleeping in kitchen" style="max-width: 100%;" ></a>
   </body>
 </html>
