--- a/project-1/page-1.html
+++ b/project-1/page-1.html
@@ -4,7 +4,7 @@
     <title>title page</title>
   </head>
   <body>
-   <a href="page-2.html"><img src="images/PROJECT%201-01.jpg" alt="enter button" style="max-width;"></a>
+   <a href="page-2.html"><img src="images/PROJECT%201-01.jpg" alt="home page" style="max-width: 100%;"></a>
 
   </body>
 </html>\
