--- a/project-1/page-12.html
+++ b/project-1/page-12.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>road</title>
   </head>
   <body>
      <a href="page-13.html"><img 
-    src="images/PROJECT%201-12.jpg" style="max-width: 100%;" ></a>
+    src="images/PROJECT%201-12.jpg" alt="car driving" style="max-width: 100%;" ></a>
   </body>
 </html>
