--- a/project-1/page-14.html
+++ b/project-1/page-14.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>apartment</title>
   </head>
   <body>
      <a href="page-15.html"><img 
-    src="images/PROJECT%201-14.jpg" style="max-width: 100%;" ></a>
+    src="images/PROJECT%201-14.jpg" alt="apartment door" style="max-width: 100%;" ></a>
   </body>
 </html>
