--- a/project-1/page-16.html
+++ b/project-1/page-16.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>welcome home</title>
   </head>
   <body>
      <a href="page-17.html"><img 
-    src="images/PROJECT%201-16.jpg" style="max-width: 100%;" ></a>
+    src="images/PROJECT%201-16.jpg" alt="friend waving saying welcome home" style="max-width: 100%;" ></a>
   </body>
 </html>
