--- a/project-1/page-19.html
+++ b/project-1/page-19.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>end page</title>
   </head>
   <body>
      <a href="page-1.html"><img 
-    src="images/PROJECT%201-19.jpg" style="max-width: 100%;" ></a>
+    src="images/PROJECT%201-19.jpg" alt="the end" style="max-width: 100%;" ></a>
   </body>
 </html>
