--- a/project-1/page-7.html
+++ b/project-1/page-7.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>park</title>
   </head>
   <body>
      <a href="page-8.html"><img 
-    src="images/PROJECT%201-07.jpg" style="max-width: 100%;" ></a>
+    src="images/PROJECT%201-07.jpg" alt="character at picnic" style="max-width: 100%;" ></a>
   </body>
 </html>
