--- a/project-1/page-8.html
+++ b/project-1/page-8.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>park 2.0</title>
   </head>
   <body>
      <a href="page-9.html"><img 
-    src="images/PROJECT%201-08.jpg" style="max-width: 100%;" ></a>
+    src="images/PROJECT%201-08.jpg" alt="character alone at park" style="max-width: 100%;" ></a>
   </body>
 </html>
