--- a/project-1/page-9.html
+++ b/project-1/page-9.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Links Example</title>
+    <title>bathroom</title>
   </head>
   <body>
      <a href="page-10.html"><img 
-    src="images/PROJECT%201-09.jpg" style="max-width: 100%;" ></a>
+    src="images/PROJECT%201-09.jpg" alt="character brushing teeth" style="max-width: 100%;" ></a>
   </body>
 </html>
