--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a href="" target="blank">Concept</a><br>
       <a href="" target="blank">Prototype: Lorem Ipsum</a>
       <br>
-      <a href="page-1.html">Final</a> 
+      <a href="project-1/page-1.html">Final</a> 
       <h2>Project 2: Reimagining The Web</h2>
       <a href="" target="blank">Final: Lorem Ipsum</a>
       <h2>Project 3: Networked Justice</h2>
