--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div>
       <h1>Projects</h1>
       <h2>Project 1: HyperNarrative</h2>
-      <a href="" target="blank">Concept</a><br>
+      <a href="https://docs.google.com/document/d/1bzu_R-Sxwp3qjg4ECGrV2IR079mG6ONdPOyOSbd2Fz4/edit?usp=sharing" target="blank">Concept</a><br>
       <a href="" target="blank">Prototype: Lorem Ipsum</a>
       <br>
       <a href="project-1/page-1.html">Final</a> 
