--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
   </div>
   <div>
       <h1>Presentation</h1>
-      <a href="" target="blank">Pecha Kucha: Lorem Ipsum</a>
+      <a href="https://drive.google.com/file/d/1vpQfV3PfeLPzXavqyBfMbYnJIgm1ciol/view?usp=sharing">Pecha Kucha: Olia Lialina</a>
   </div>
 
   <div>
       <h1>Projects</h1>
       <h2>Project 1: HyperNarrative</h2>
-      <a href="https://docs.google.com/document/d/1bzu_R-Sxwp3qjg4ECGrV2IR079mG6ONdPOyOSbd2Fz4/edit?usp=sharing" target="blank">Concept</a><br>
+      <a href="https://docs.google.com/document/d/1bzu_R-Sxwp3qjg4ECGrV2IR079mG6ONdPOyOSbd2Fz4/edit?usp=sharing">Concept</a>
+      <br>
       <a href="" target="blank">Prototype: Lorem Ipsum</a>
       <br>
       <a href="project-1/page-1.html">Final</a> 
