--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h2>Project 1: HyperNarrative</h2>
       <a href="https://docs.google.com/document/d/1bzu_R-Sxwp3qjg4ECGrV2IR079mG6ONdPOyOSbd2Fz4/edit?usp=sharing">Concept</a>
       <br>
-      <a href="" target="blank">Prototype: Lorem Ipsum</a>
+      <a href="project-1/prototype-1.html">Prototype: Draft to HyperNarrative</a>
       <br>
       <a href="project-1/page-1.html">Final</a> 
       <h2>Project 2: Reimagining The Web</h2>
