add button links

--- a/project-1/page-1.html
+++ b/project-1/page-1.html
@@ -4,7 +4,10 @@
     <title>title page</title>
   </head>
   <body>
-   <a href="page-2.html"><img src="images/PROJECT%201-01.jpg" alt="home page" style="max-width: 100%;"></a>
+    <div class="main">
+        <img src="images/PROJECT%201-01.jpg" alt="home page" class="base">
 
+        <a href="page-2.html"><img src="images/buttons-01.png" class="overlay"></a>
+      </div>
   </body>
-</html>\
+</html>
