--- a/project-1/page-2.html
+++ b/project-1/page-2.html
@@ -4,7 +4,9 @@
     <title>introduction page</title>
   </head>
   <body>
-    <a href="page-3.html"><img 
-    src="images/PROJECT%201-02.jpg" alt="introduction page" style="max-width: 100%;"></a>
-</body> </html>
-<img src=""
+    <div class="main">
+        <img src="images/PROJECT%201-02.jpg" alt="welcome page" class="base">
+        <a href="page-3.html"><img src="images/buttons-03.png" class="overlay"></a>
+      </div>
+    </body>
+</html>
