--- a/project-1/page-1.html
+++ b/project-1/page-1.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="main">
-        <img src="images/PROJECT%201-01.jpg" alt="home page" class="base">
+        <img src="images/PROJECT%201-01.jpg" alt="home page" style="max-width: 100%;" class="base">
 
         <a href="page-2.html"><img src="images/buttons-01.png" class="overlay"></a>
       </div>
