--- a/project-1/page-2.html
+++ b/project-1/page-2.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="main">
-        <img src="images/PROJECT%201-02.jpg" alt="welcome page" class="base">
+        <img src="images/PROJECT%201-02.jpg" alt="welcome page" class="base" style="max-width: 100%;">
         <a href="page-3.html"><img src="images/buttons-03.png" class="overlay"></a>
       </div>
     </body>
