--- a/project-1/page-1.html
+++ b/project-1/page-1.html
@@ -3,6 +3,7 @@
   <head>
     <title>title page</title>
   </head>
+    <link rel="stylesheet" href="assets/main.css" type="text/css" />
   <body>
     <div class="main">
         <img src="images/PROJECT%201-01.jpg" alt="home page" style="max-width: 100%;" class="base">
