--- a/project-1/page-2.html
+++ b/project-1/page-2.html
@@ -4,8 +4,29 @@
     <title>introduction page</title>
   </head>
   <body>
+    <style>
+        .main {
+            display: flex;
+
+        }
+
+        .base {
+            position: absolute;
+            max-width: 100%;
+        }
+
+        .overlay {
+            z-index: 1;
+            position: absolute;
+            width: 6%;
+            margin-top: 41.4%;
+            margin-left: 47%;
+        }
+    </style>
+    
     <div class="main">
-        <img src="images/PROJECT%201-02.jpg" alt="welcome page" class="base" style="max-width: 100%;">
+        <img src="images/PROJECT%201-02.png" alt="home page" class="base">
+
         <a href="page-3.html"><img src="images/buttons-03.png" class="overlay"></a>
       </div>
     </body>
