--- a/project-1/page-3.html
+++ b/project-1/page-3.html
@@ -4,7 +4,30 @@
     <title>bedroom</title>
   </head>
   <body>
-      <a href="page-4.html"><img 
-    src="images/PROJECT%201-03.jpg" alt="character sleeping" style="max-width: 100%;"></a>
+      <style>
+        .main {
+            display: flex;
+
+        }
+
+        .base {
+            position: absolute;
+            max-width: 100%;
+        }
+
+        .overlay {
+            z-index: 1;
+            position: absolute;
+            width: 6%;
+            margin-top: 50%;
+            margin-left: 91.5%;
+        }
+    </style>
+    
+    <div class="main">
+        <img src="images/PROJECT%201-03.png" alt="home page" class="base">
+
+        <a href="page-5.html"><img src="images/buttons-03.png" class="overlay"></a>
+      </div>
   </body>
 </html>
