--- a/project-1/page-4.html
+++ b/project-1/page-4.html
@@ -4,7 +4,30 @@
     <title>bedroom 2.0</title>
   </head>
   <body>
-    <a href="page-5.html"><img 
-    src="images/PROJECT%201-04.jpg" alt="character having nightmare" style="max-width: 100%;" ></a>
+        <style>
+        .main {
+            display: flex;
+
+        }
+
+        .base {
+            position: absolute;
+            max-width: 100%;
+        }
+
+        .overlay {
+            z-index: 1;
+            position: absolute;
+            width: 6%;
+            margin-top: 50%;
+            margin-left: 91.5%;
+        }
+    </style>
+    
+    <div class="main">
+        <img src="images/PROJECT%201-04.png" alt="home page" class="base">
+
+        <a href="page-5.html"><img src="images/buttons-04.png" class="overlay"></a>
+      </div>
   </body>
 </html>
