--- a/project-1/page-4.html
+++ b/project-1/page-4.html
@@ -22,12 +22,21 @@
             margin-top: 50%;
             margin-left: 91.5%;
         }
+        .redbutton {
+            z-index: 2;
+            position: absolute;
+            width: 5%;
+            margin-top: 32.4%;
+            margin-left: 76%;
+          }
     </style>
     
     <div class="main">
         <img src="images/PROJECT%201-04.png" alt="home page" class="base">
 
         <a href="page-5.html"><img src="images/buttons-04.png" class="overlay"></a>
+        
+        <a href="page-3.html"><img src="images/buttons-05.png" class="redbutton"></a>
       </div>
   </body>
 </html>
