--- a/project-1/page-6.html
+++ b/project-1/page-6.html
@@ -22,12 +22,21 @@
             margin-top: 50%;
             margin-left: 91.5%;
         }
+         .redbutton {
+            z-index: 2;
+            position: absolute;
+            width: 4%;
+            margin-top: 26.5%;
+            margin-left: 62.5%;
+          }
     </style>
     
     <div class="main">
         <img src="images/PROJECT%201-06.png" alt="home page" class="base">
 
         <a href="page-7.html"><img src="images/buttons-04.png" class="overlay"></a>
+        
+         <a href="page-5.html"><img src="images/buttons-06.png" class="redbutton"></a>
       </div>
   </body>
 </html>
