--- a/project-1/page-8.html
+++ b/project-1/page-8.html
@@ -22,12 +22,20 @@
             margin-top: 50%;
             margin-left: 91.5%;
         }
+         .redbutton {
+            z-index: 2;
+            position: absolute;
+            width: 7%;
+            margin-top: 38.3%;
+            margin-left: 27.7%;
     </style>
     
     <div class="main">
         <img src="images/PROJECT%201-08.png" alt="home page" class="base">
 
         <a href="page-9.html"><img src="images/buttons-04.png" class="overlay"></a>
+        
+
       </div>
   </body>
 </html>
