--- a/project-1/page-7.html
+++ b/project-1/page-7.html
@@ -22,12 +22,21 @@
             margin-top: 50%;
             margin-left: 91.5%;
         }
+          .redbutton {
+            z-index: 2;
+            position: absolute;
+            width: 7%;
+            margin-top: 38.3%;
+            margin-left: 27.7%;
+          }
     </style>
     
     <div class="main">
         <img src="images/PROJECT%201-07.png" alt="home page" class="base">
 
         <a href="page-9.html"><img src="images/buttons-03.png" class="overlay"></a>
+        
+        <a href="page-8.html"><img src="images/buttons-07.png" class="redbutton"></a>
       </div>
   </body>
 </html>
