--- a/project-1/page-1.html
+++ b/project-1/page-1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>title page</title>
+    <title>Menu - HyperNarrative Project</title>
     <link rel="stylesheet" href="assets/main.css" type="text/css" />
 </head>
 <body>
@@ -29,7 +29,7 @@
     <div class="main">
         <img src="images/PROJECT%201-01.png" alt="home page" class="base" style="max-width: 100%;">
 
-        <a href="page-2.html"><img src="images/p-1-enter-button.png" class="overlay"></a>
+        <a href="page-2.html"><img src="images/p-1-enter-button.png" class="overlay" alt="Enter"></a>
     </div>
 
 </body>
