--- a/project-1/page-10.html
+++ b/project-1/page-10.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>bathroom 2.0</title>
+    <title>Bathroom - HyperNarrative Project</title>
   </head>
   <body>
         <style>
@@ -32,7 +32,7 @@
     </style>
     
     <div class="main">
-        <img src="images/PROJECT%201-10.png" alt="home page" class="base">
+        <img src="images/PROJECT%201-10.png" alt="Bathroom Crying in Bathroom" class="base">
 
         <a href="page-11.html"><img src="images/buttons-04.png" class="overlay"></a>
         
