--- a/project-1/page-19.html
+++ b/project-1/page-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>open door</title>
+    <title>The End - HyperNarrative Project</title>
   </head>
   <body>
       <style>
@@ -32,7 +32,7 @@
     </style>
     
     <div class="main">
-        <img src="images/PROJECT%201-19.png" alt="home page" class="base">
+        <img src="images/PROJECT%201-19.png" alt="The End" class="base">
 
         <a href="page-2.html"><img src="images/buttons-16.png" class="overlay"></a>
         
