--- a/project-1/page-2.html
+++ b/project-1/page-2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>introduction page</title>
+    <title>Play - HyperNarrative Project</title>
   </head>
   <body>
     <style>
@@ -25,9 +25,9 @@
     </style>
     
     <div class="main">
-        <img src="images/PROJECT%201-02.png" alt="home page" class="base">
+        <img src="images/PROJECT%201-02.png" class="base">
 
-        <a href="page-3.html"><img src="images/buttons-03.png" class="overlay"></a>
+        <a href="page-3.html"><img src="images/buttons-03.png" class="overlay" alt="Play Button"></a>
       </div>
     </body>
 </html>
