--- a/project-1/page-3.html
+++ b/project-1/page-3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>bedroom</title>
+    <title>Bedroom - HyperNarrative Project</title>
   </head>
   <body>
       <style>
@@ -33,7 +33,7 @@
     </style>
     
     <div class="main">
-        <img src="images/PROJECT%201-03.png" alt="home page" class="base">
+        <img src="images/PROJECT%201-03.png" alt="Character Sleeping" class="base">
 
         <a href="page-5.html"><img src="images/buttons-03.png" class="overlay"></a>
         
