--- a/project-1/page-4.html
+++ b/project-1/page-4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>bedroom 2.0</title>
+    <title>Bedroom - HyperNarrative Project</title>
   </head>
   <body>
         <style>
@@ -32,7 +32,7 @@
     </style>
     
     <div class="main">
-        <img src="images/PROJECT%201-04.png" alt="home page" class="base">
+        <img src="images/PROJECT%201-04.png" alt="Character Having Nightmare" class="base">
 
         <a href="page-5.html"><img src="images/buttons-04.png" class="overlay"></a>
         
