--- a/project-1/page-6.html
+++ b/project-1/page-6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>kitchen 2.0</title>
+    <title>Kitchen - HyperNarrative Project</title>
   </head>
   <body>
         <style>
@@ -32,7 +32,7 @@
     </style>
     
     <div class="main">
-        <img src="images/PROJECT%201-06.png" alt="home page" class="base">
+        <img src="images/PROJECT%201-06.png" alt="Character Sleeping in Kitchen" class="base">
 
         <a href="page-7.html"><img src="images/buttons-04.png" class="overlay"></a>
         
