--- a/project-1/page-7.html
+++ b/project-1/page-7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>park</title>
+    <title>Park - HyperNarrative Project</title>
   </head>
   <body>
       <style>
@@ -32,7 +32,7 @@
     </style>
     
     <div class="main">
-        <img src="images/PROJECT%201-07.png" alt="home page" class="base">
+        <img src="images/PROJECT%201-07.png" alt="Character Having Picnic in the Park" class="base">
 
         <a href="page-9.html"><img src="images/buttons-03.png" class="overlay"></a>
         
