--- a/project-1/page-8.html
+++ b/project-1/page-8.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>park 2.0</title>
+    <title>Park - HyperNarrative Project</title>
   </head>
   <body>
         <style>
@@ -31,7 +31,7 @@
     </style>
     
     <div class="main">
-        <img src="images/PROJECT%201-08.png" alt="home page" class="base">
+        <img src="images/PROJECT%201-08.png" alt="Character Alone in Park" class="base">
 
         <a href="page-9.html"><img src="images/buttons-04.png" class="overlay"></a>
         
