--- a/project-1/page-9.html
+++ b/project-1/page-9.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>bathroom</title>
+    <title>Bathroom - HyperNarrative Project</title>
   </head>
   <body>
       <style>
@@ -31,7 +31,7 @@
     </style>
     
     <div class="main">
-        <img src="images/PROJECT%201-09.png" alt="home page" class="base">
+        <img src="images/PROJECT%201-09.png" alt="Character Brushing Teeth" class="base">
 
         <a href="page-11.html"><img src="images/buttons-03.png" class="overlay"></a>
         
