--- a/project-1/page-13.html
+++ b/project-1/page-13.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>road</title>
+    <title>Road - HyperNarrative Project</title>
   </head>
   <body>
       <style>
@@ -25,7 +25,7 @@
     </style>
     
     <div class="main">
-        <img src="images/PROJECT%201-13.png" alt="home page" class="base">
+        <img src="images/PROJECT%201-13.png" alt="Car Driving Past Hollywood Sign" class="base">
 
         <a href="page-14.html"><img src="images/buttons-03.png" class="overlay"></a>
       </div>
