--- a/project-1/page-14.html
+++ b/project-1/page-14.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>apartment</title>
+    <title>Apartment - HyperNarrative Project</title>
   </head>
   <body>
       <style>
@@ -25,7 +25,7 @@
     </style>
     
     <div class="main">
-        <img src="images/PROJECT%201-14.png" alt="home page" class="base">
+        <img src="images/PROJECT%201-14.png" alt="Apartment Door" class="base">
 
         <a href="page-15.html"><img src="images/buttons-03.png" class="overlay"></a>
       </div>
