--- a/project-1/page-17.html
+++ b/project-1/page-17.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>open door</title>
+    <title>Apartment - HyperNarrative Project</title>
   </head>
   <body>
       <style>
@@ -25,7 +25,7 @@
     </style>
     
     <div class="main">
-        <img src="images/PROJECT%201-17.png" alt="home page" class="base">
+        <img src="images/PROJECT%201-17.png" alt="Character Moving In" class="base">
 
         <a href="page-18.html"><img src="images/buttons-03.png" class="overlay"></a>
       </div>
