--- a/project-1/page-19.html
+++ b/project-1/page-19.html
@@ -36,7 +36,7 @@
 
         <a href="page-2.html"><img src="images/buttons-16.png" class="overlay"></a>
         
-        <a href="page-1.html"><img src="images/buttons-19.png" class="menu"></a>
+        <a href="index.html"><img src="images/buttons-19.png" class="menu"></a>
       </div>
   </body>
 </html>
