add index to landing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <br>
       <a href="project-1/prototype-1.html">Prototype: Draft to HyperNarrative</a>
       <br>
-      <a href="project-1/page-1.html">Final</a> 
+      <a href="project-1/index.html">Final</a> 
       <h2>Project 2: Reimagining The Web</h2>
       <a href="" target="blank">Final: Lorem Ipsum</a>
       <h2>Project 3: Networked Justice</h2>
