--- a/index.html
+++ b/index.html
@@ -3,39 +3,47 @@
 <html>
 
 <head>
+    <style>
+        Body {background-color: darkseagreen}
+    </style>
     <title>Claire Wong</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="assets/main.css" type="text/css" />
 </head>
 
-<body>
+<body style="font-family: Didot, serif" style="color: aliceblue">
   <div>
     <h1>Claire Wong</h1>
-    <p> This is my website for IML300 class. I am a second-year student in Media Arts + Practice. </p>
+    <p> This is my website for IML300 class. I am a second-year student in Media Arts + Practice. Welcome to my collection of works! :) </p>
   </div>
 
   <div>
       <h1>Exercises</h1>
-      <a href="" target="blank">p5.js sketch 1</a><br>
-      <a href="" target="blank">p5.js sketch 2</a>
+      <a style="color: aliceblue" href="" target="blank">p5.js sketch 1</a><br>
+      <a style="color: aliceblue" href="" target="blank">p5.js sketch 2</a>
   </div>
   <div>
       <h1>Presentation</h1>
-      <a href="https://drive.google.com/file/d/1vpQfV3PfeLPzXavqyBfMbYnJIgm1ciol/view?usp=sharing">Pecha Kucha: Olia Lialina</a>
+      <a style="color: aliceblue" href="https://drive.google.com/file/d/1vpQfV3PfeLPzXavqyBfMbYnJIgm1ciol/view?usp=sharing">Pecha Kucha: Olia Lialina</a>
   </div>
 
   <div>
       <h1>Projects</h1>
       <h2>Project 1: HyperNarrative</h2>
-      <a href="https://docs.google.com/document/d/1bzu_R-Sxwp3qjg4ECGrV2IR079mG6ONdPOyOSbd2Fz4/edit?usp=sharing">Concept</a>
+      <a style="color: aliceblue" href="https://docs.google.com/document/d/1bzu_R-Sxwp3qjg4ECGrV2IR079mG6ONdPOyOSbd2Fz4/edit?usp=sharing">Concept</a>
       <br>
-      <a href="project-1/prototype-1.html">Prototype: Draft to HyperNarrative</a>
+      <a style="color: aliceblue" href="project-1/prototype-1.html">Prototype: Draft to HyperNarrative</a>
       <br>
-      <a href="project-1/index.html">Final</a> 
+      <a style="color: aliceblue" href="project-1/index.html">Final</a> 
       <h2>Project 2: Reimagining The Web</h2>
-      <a href="" target="blank">Final: Lorem Ipsum</a>
+      <a style="color: aliceblue" href="" target="blank">Final: Lorem Ipsum</a>
       <h2>Project 3: Networked Justice</h2>
-      <a href="" target="blank">Final: Lorem Ipsum</a>
+      <a style="color: aliceblue" href="" target="blank">Final: Lorem Ipsum</a>
   </div>
+    
+    <div>
+      <h1>Archives</h1>
+        <a style="color: aliceblue" href="" target="blank">Discussion Questions</a>
+    </div>
 </body>
 </html>
