--- a/index.html
+++ b/index.html
@@ -1,49 +1,80 @@
 
 <!DOCTYPE html>
 <html>
-
+<img src="assets/dino!-01.png" style="max-width: 100%;">
 <head>
     <style>
-        Body {background-color: darkseagreen}
+        Body {background-color: white}
     </style>
     <title>Claire Wong</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="assets/main.css" type="text/css" />
 </head>
 
-<body style="font-family: Didot, serif" style="color: aliceblue">
-  <div>
-    <h1>Claire Wong</h1>
-    <p> This is my website for IML300 class. I am a second-year student in Media Arts + Practice. Welcome to my collection of works! :) </p>
-  </div>
+<body>
+    <style>
 
-  <div>
-      <h1>Exercises</h1>
-      <a style="color: aliceblue" href="" target="blank">p5.js sketch 1</a><br>
-      <a style="color: aliceblue" href="" target="blank">p5.js sketch 2</a>
-  </div>
-  <div>
-      <h1>Presentation</h1>
-      <a style="color: aliceblue" href="https://drive.google.com/file/d/1vpQfV3PfeLPzXavqyBfMbYnJIgm1ciol/view?usp=sharing">Pecha Kucha: Olia Lialina</a>
-  </div>
+  .serif{
+    font-family: Georgia, serif;
+  }
+  
+  .sans-serif{
+    font-family: Helvetica, sans-serif;
+  }
 
-  <div>
-      <h1>Projects</h1>
-      <h2>Project 1: HyperNarrative</h2>
-      <a style="color: aliceblue" href="https://docs.google.com/document/d/1bzu_R-Sxwp3qjg4ECGrV2IR079mG6ONdPOyOSbd2Fz4/edit?usp=sharing">Concept</a>
-      <br>
-      <a style="color: aliceblue" href="project-1/prototype-1.html">Prototype: Draft to HyperNarrative</a>
-      <br>
-      <a style="color: aliceblue" href="project-1/index.html">Final</a> 
-      <h2>Project 2: Reimagining The Web</h2>
-      <a style="color: aliceblue" href="" target="blank">Final: Lorem Ipsum</a>
-      <h2>Project 3: Networked Justice</h2>
-      <a style="color: aliceblue" href="" target="blank">Final: Lorem Ipsum</a>
-  </div>
+ .overlay {
+    z-index: 1;
+    position: absolute;
+    width: 30%;
+    margin-top: 40%;
+    margin-left: 35%;
+        }
+    </style>
     
+  <div>
+    <h1 class='sans-serif'class='overlay'>Claire Wong</h1>
+    <p class='sans-serif'>
+      </p>
+  </div>
+<br>
+  <div>
+
+      <h2 class='sans-serif'>Exercises</h2>
+      <a style="color: black" href="" target="blank" class='sans-serif'>p5.js sketch 1</a>
+      <br>
+      <a style="color: black" class='sans-serif' href="" target="blank">p5.js sketch 2</a>
+  </div>
+    <br>
+    
+
+  <div>
+      <h2 class='sans-serif'>Presentation</h2>
+      <a style="color: black" href="https://drive.google.com/file/d/1vpQfV3PfeLPzXavqyBfMbYnJIgm1ciol/view?usp=sharing" class='sans-serif'>Pecha Kucha: Olia Lialina</a>
+  </div>
+    <br>
+  
+
     <div>
-      <h1>Archives</h1>
-        <a style="color: aliceblue" href="" target="blank">Discussion Questions</a>
+      <h2 class='sans-serif'>Projects</h2>
+      <h4 class='sans-serif'>Project 1: HyperNarrative</h4>
+      <a style="color: black" class='sans-serif' href="https://docs.google.com/document/d/1bzu_R-Sxwp3qjg4ECGrV2IR079mG6ONdPOyOSbd2Fz4/edit?usp=sharing">Concept</a>
+      <br>
+      <a style="color: black" class='sans-serif' href="project-1/prototype-1.html">Prototype: Draft to HyperNarrative</a>
+      <br>
+      <a style="color: black" class='sans-serif' href="project-1/index.html">Final</a> 
+      <br>
+      <h3 class='sans-serif'>Project 2: Reimagining The Web</h3>
+      <a style="color: black" class='sans-serif' href="" target="blank">Final: Lorem Ipsum</a>
+      <br>
+      <h3 class='sans-serif'>Project 3: Networked Justice</h3>
+      <a style="color: black" class='sans-serif' href="" target="blank">Final: Lorem Ipsum</a>
+  </div>
+    <br>
+    <br>
+
+    <div>
+      <h2 class='sans-serif' style="color: black">Archives</h2>
+        <a style="color: black" class='sans-serif' href="" target="blank">Discussion Questions</a>
     </div>
 </body>
 </html>
