--- a/index.html
+++ b/index.html
@@ -9,29 +9,31 @@
 
 <body>
   <div>
+    <h1>Claire Wong</h1>
+    <p> This is my website for IML300 class. I am a second-year student in Media Arts + Practice. </p>
+  </div>
+
+  <div>
       <h1>Exercises</h1>
-      <a href="" target="blank">Spreadsheet Typeface</a><br>
-      <a href="" target="blank">Coding from Life</a><br>
-      <a href="" target="blank">:hover</a>
+      <a href="" target="blank">p5.js sketch 1</a><br>
+      <a href="" target="blank">p5.js sketch 2</a>
   </div>
   <div>
       <h1>Presentation</h1>
-      <a href="" target="blank">Pecha Kucha: Lorem Ipsum</a>
+      <a href="https://drive.google.com/file/d/1vpQfV3PfeLPzXavqyBfMbYnJIgm1ciol/view?usp=sharing">Pecha Kucha: Olia Lialina</a>
   </div>
 
   <div>
       <h1>Projects</h1>
-      <h2>Project 1: Republish a Text</h2>
-      <a href="" target="blank">Prototype 1: Lorem Ipsum</a><br>
-      <a href="" target="blank">Prototype 2: Lorem Ipsum</a><br>
+      <h2>Project 1: HyperNarrative</h2>
+      <a href="https://docs.google.com/document/d/1bzu_R-Sxwp3qjg4ECGrV2IR079mG6ONdPOyOSbd2Fz4/edit?usp=sharing">Concept</a>
+      <br>
+      <a href="project-1/prototype-1.html">Prototype: Draft to HyperNarrative</a>
+      <br>
+      <a href="project-1/index.html">Final</a> 
+      <h2>Project 2: Reimagining The Web</h2>
       <a href="" target="blank">Final: Lorem Ipsum</a>
-      <h2>Project 2: CSS Typeface</h2>
-      <a href="" target="blank">Sketches</a><br>
-      <a href="" target="blank">Prototype: Lorem Ipsum</a><br>
-      <a href="" target="blank">Final: Lorem Ipsum</a>
-      <h2>Project 3: Exhibition Microsite</h2>
-      <a href="" target="blank">Sketches</a><br>
-      <a href="" target="blank">Prototype: Lorem Ipsum</a><br>
+      <h2>Project 3: Networked Justice</h2>
       <a href="" target="blank">Final: Lorem Ipsum</a>
   </div>
 </body>
