--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
            background-size: cover;
           background-repeat: no-repeat;
            max-width: 100%;
-    background-color: cadetblue
+    background-color: #dff7ba
       } 
     </style>
         
