--- a/index.html
+++ b/index.html
@@ -36,12 +36,17 @@
     margin-top: 40%;
     margin-left: 35%;
         }
+        
+    h1 {
+        text size: 100px
+        }
     </style>
     
   <div>
-    <h1 style="color: black" class='sans-serif'class='overlay'>Claire Wong</h1>
+    <h1 style="color: black" class='sans-serif'class='overlay'>hey i am CLAIRE WONG</h1>
     <p class='sans-serif'>
       </p>
+      <h3> and welcome to my IML 300 landing page! check out my work below! </h3>
   </div>
 <br>
   <div>
