--- a/index.html
+++ b/index.html
@@ -73,15 +73,19 @@
       <h4 style="color: black" class='sans-serif'>Project 1: HyperNarrative</h4>
       <a style="color: darkslategrey" class='sans-serif' href="https://docs.google.com/document/d/1bzu_R-Sxwp3qjg4ECGrV2IR079mG6ONdPOyOSbd2Fz4/edit?usp=sharing">Concept</a>
       <br>
-      <a style="color: darkslategrey" class='sans-serif' href="project-1/prototype-1.html">Prototype: Draft to HyperNarrative</a>
+      <a style="color: darkslategrey" class='sans-serif' href="project-1/prototype-1.html">Prototype: Draft of HyperNarrative</a>
       <br>
-      <a style="color: darkslategrey" class='sans-serif' href="project-1/index.html">Final</a> 
+      <a style="color: darkslategrey" class='sans-serif' href="project-1/index.html">Final: A Story of Quarantine</a> 
       <br>
       <h3 style="color: black" class='sans-serif'>Project 2: Reimagining The Web</h3>
-      <a style="color: darkslategrey" class='sans-serif' href="https://github.com/claireewong/iml300/blob/master/project-2/README.md" target="blank">Final: Lorem Ipsum</a>
+      <a style="color: darkslategrey" class='sans-serif' href="https://github.com/claireewong/iml300/blob/master/project-2/README.md" target="blank">Final: Coffee Counter Chrome Extension</a>
       <br>
       <h3 style="color: black" class='sans-serif'>Project 3: Networked Justice</h3>
-      <a style="color: darkslategrey" class='sans-serif' href="https://iml300-guidetosustainablefashion.glitch.me/" target="blank">Final: Lorem Ipsum</a>
+      <a style="color: darkslategrey" class='sans-serif' href="https://docs.google.com/document/d/1zgAkxhcOy0Yd-5yiQWShqKIxHfRRYJEoURUH7iwgWQA/edit?usp=sharing" target="blank">Concept</a>
+        <br>
+      <a style="color: darkslategrey" class='sans-serif' href="https://www.figma.com/file/dA9uxFaccDa4MhCM7OEC7R/300-Website?node-id=0%3A1" target="blank">Prototype: Draft of Website Design via Figma</a>
+        <br>
+      <a style="color: darkslategrey" class='sans-serif' href="https://iml300-guidetosustainablefashion.glitch.me/" target="blank">Final: Fashion Outfitters</a>
   </div>
     <br>
     <br>
