--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <br>
   <div>
 
-      <h2 style="color: black" class='sans-serif'>Exercises</h2>
+      <h2 style="color: black" class='sans-serif'>EXERCISES</h2>
       <a style="color: darkslategrey" href="https://editor.p5js.org/claireewong/sketches/lR17gd5dG" target="blank" class='sans-serif' >p5.js sketch 1</a>
       <br>
       <a style="color: darkslategrey" class='sans-serif' href="https://editor.p5js.org/claireewong/sketches/FBrzXUuCI" target="blank">p5.js sketch 2</a>
@@ -62,14 +62,14 @@
     
 
   <div>
-      <h2 style="color: black" class='sans-serif'>Presentation</h2>
+      <h2 style="color: black" class='sans-serif'>PRESENTATION</h2>
       <a style="color: darkslategrey" href="https://drive.google.com/file/d/1vpQfV3PfeLPzXavqyBfMbYnJIgm1ciol/view?usp=sharing" class='sans-serif'>Pecha Kucha: Olia Lialina</a>
   </div>
     <br>
   
 
     <div>
-      <h2 style="color: black" class='sans-serif'>Projects</h2>
+      <h2 style="color: black" class='sans-serif'>PROJECTS</h2>
       <h4 style="color: black" class='sans-serif'>Project 1: HyperNarrative</h4>
       <a style="color: darkslategrey" class='sans-serif' href="https://docs.google.com/document/d/1bzu_R-Sxwp3qjg4ECGrV2IR079mG6ONdPOyOSbd2Fz4/edit?usp=sharing">Concept</a>
       <br>
@@ -88,11 +88,16 @@
       <a style="color: darkslategrey" class='sans-serif' href="https://iml300-guidetosustainablefashion.glitch.me/" target="blank">Final: Fashion Outfitters</a>
   </div>
     <br>
+    
+  <div>
+      <h2 style="color: black" class='sans-serif'>DISCUSSION QUESTIONS</h2>
+      <a style="color: darkslategrey" href="" class='sans-serif'>Document: Archived Discussion Questions</a>
+    </div>
     <br>
 
     <div>
-      <h2 style="color: black" class='sans-serif' style="color: darkslategrey">Archives</h2>
-        <a style="color: darkslategrey" class='sans-serif' href="" target="blank">Discussion Questions</a>
+      <h2 style="color: black" class='sans-serif' style="color: darkslategrey">ARCHIVES</h2>
+        <a style="color: darkslategrey" class='sans-serif' target="blank">coming soon!</a>
     </div>
 </body>
 </html>
