--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     
   <div class="ex1">
       <h2 style="color: black" class='sans-serif'>DISCUSSION QUESTIONS</h2>
-      <a style="color: darkslategrey" href="" class='sans-serif'>Document: Archived Discussion Questions</a>
+      <a style="color: darkslategrey" href="https://docs.google.com/document/d/1jiJl0hyPZpJ3ZjQSIf_Uvf6yB5VO4Z18hLW6MOhRGgk/edit?usp=sharing" class='sans-serif'>Document: Archived Discussion Questions</a>
     </div>
     <br>
 
